@@ -5,7 +5,10 @@ import java.time.YearMonth;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.springframework.data.domain.PageRequest;
@@ -15,23 +18,30 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.ssamba.petsi.account_service.domain.account.dto.fin.FinApiResponseDto;
 import com.ssamba.petsi.account_service.domain.account.dto.request.AccountTransferRequestDto;
-import com.ssamba.petsi.account_service.domain.account.dto.request.CheckAccountAuthDto;
+import com.ssamba.petsi.account_service.domain.account.dto.request.CheckAccountPassword;
 import com.ssamba.petsi.account_service.domain.account.dto.request.CreateAccountRequestDto;
 import com.ssamba.petsi.account_service.domain.account.dto.request.OpenAccountAuthRequestDto;
 import com.ssamba.petsi.account_service.domain.account.dto.request.UpdateAccountNameRequestDto;
 import com.ssamba.petsi.account_service.domain.account.dto.request.UpdateRecurringTransactionRequestDto;
+import com.ssamba.petsi.account_service.domain.account.dto.response.AccountHolderNameResponseDto;
 import com.ssamba.petsi.account_service.domain.account.dto.response.GetAccountDetailsResponseDto;
 import com.ssamba.petsi.account_service.domain.account.dto.response.GetAccountHistoryResponseDto;
 import com.ssamba.petsi.account_service.domain.account.dto.response.GetAllAcountsResponseDto;
 import com.ssamba.petsi.account_service.domain.account.dto.response.GetAllProductsResponseDto;
 import com.ssamba.petsi.account_service.domain.account.entity.Account;
 import com.ssamba.petsi.account_service.domain.account.entity.AccountProduct;
+import com.ssamba.petsi.account_service.domain.account.entity.PetToAccount;
 import com.ssamba.petsi.account_service.domain.account.entity.RecurringTransaction;
 import com.ssamba.petsi.account_service.domain.account.enums.AccountStatus;
 import com.ssamba.petsi.account_service.domain.account.repository.AccountProductRepository;
 import com.ssamba.petsi.account_service.domain.account.repository.AccountRepository;
 import com.ssamba.petsi.account_service.domain.account.repository.LinkedAccountRepository;
+import com.ssamba.petsi.account_service.domain.account.repository.PetToAccountRepository;
 import com.ssamba.petsi.account_service.domain.account.repository.RecurringTransactionRepository;
+import com.ssamba.petsi.account_service.global.client.PetClient;
+import com.ssamba.petsi.account_service.global.client.PictureClient;
+import com.ssamba.petsi.account_service.global.dto.PetCustomDto;
+import com.ssamba.petsi.account_service.global.dto.PictureMonthlyRequestDto;
 import com.ssamba.petsi.account_service.global.exception.BusinessLogicException;
 import com.ssamba.petsi.account_service.global.exception.ExceptionCode;
 
@@ -39,6 +49,7 @@ import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class AccountService {
 
 	private final LinkedAccountRepository linkedAccountRepository;
@@ -46,12 +57,15 @@ public class AccountService {
 	private final AccountRepository accountRepository;
 	private final RecurringTransactionRepository recurringTransactionRepository;
 	private final AccountFinApiService accountFinApiService;
+	private final PetClient petClient;
+	private final PictureClient pictureClient;
+	private final PetToAccountRepository petToAccountRepository;
 
 	@Transactional(readOnly = true)
 	public List<GetAllProductsResponseDto> getAllProducts() {
 		return accountProductRepository.findAll().stream()
 			.map(GetAllProductsResponseDto::from)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public void openAccountAuth(OpenAccountAuthRequestDto openAccountAuthRequestDto, String userKey) {
@@ -63,72 +77,94 @@ public class AccountService {
 		accountFinApiService.openAccountAuth(userKey, openAccountAuthRequestDto.getAccountNo());
 	}
 
-	@Transactional
 	public void createAccountBySteps(CreateAccountRequestDto createAccountRequestDto, String userKey, Long userId) {
 
-		CheckAccountAuthDto checkAccountAuthDto = new CheckAccountAuthDto(createAccountRequestDto);
-		checkAccountAuthDto.setUserKey(userKey);
-
+		//1. 인증 코드 체크
 		accountFinApiService.checkAuthCode(userKey, createAccountRequestDto.getAccountNo(),
 			createAccountRequestDto.getCode());
 
+		//2. 계좌 상품 조회
 		AccountProduct product = accountProductRepository.findById(createAccountRequestDto.getAccountProductId())
 			.orElseThrow(() -> new BusinessLogicException(ExceptionCode.ACCOUNT_CATEGORY_NOT_FOUND));
 
+		//3. 계좌 번호 갖고오기
 		String accountNo = accountFinApiService.createDemandDepositAccount(product.getAccountTypeUniqueNo(), userKey);
 
-		Account account = CreateAccountRequestDto.toAccount(createAccountRequestDto, product, accountNo, userId, userKey);
-		account = accountRepository.save(account);
+		//4. DB에 저장
+		Account account = accountRepository.save(
+			CreateAccountRequestDto.toAccount(createAccountRequestDto, product, accountNo, userId, userKey));
 
+		//5. 연결된 계좌 저장
 		linkedAccountRepository.save(
 			CreateAccountRequestDto.toLinkedAccount(createAccountRequestDto, account));
 
+		//6. Pet 매핑
+		List<Long> petIds = createAccountRequestDto.getPets();
+		petIds.forEach(petId ->
+			petToAccountRepository.save(
+				new PetToAccount(null, account, petId)
+			)
+		);
+
+		//7. 주기적 거래 저장
 		if (createAccountRequestDto.getIsAuto()) {
-			RecurringTransaction recurringTransaction = CreateAccountRequestDto.toRecurringTransaction(
-				createAccountRequestDto, account);
-			recurringTransactionRepository.save(recurringTransaction);
+			recurringTransactionRepository.save(CreateAccountRequestDto.toRecurringTransaction(
+				createAccountRequestDto, account));
 		}
 
 	}
 
 	@Transactional(readOnly = true)
-	public List<?> getAllAccounts(Long userId, String userKey) {
-		//todo: 월별 사진 인증 횟수 및 이자율 계산해서 같이 return
-		//todo: 계좌 내 매핑된 pet의 사진 같이 return
+	public GetAllAcountsResponseDto getAllAccounts(Long userId, String userKey) {
+		int pictureCnt = pictureClient.getMonthlyPicture(
+			new PictureMonthlyRequestDto(userId, 2024, LocalDate.now().getMonth().getValue())).size();
+		double interest = Math.min(1 + pictureCnt * 0.1, 3);
+
+		List<PetCustomDto> petList = petClient.findAllWithPetCustomDto(userId);
 
 		List<FinApiResponseDto.AccountListResponseDto> accountList = accountFinApiService.inquireDemandDepositAccountList(userKey);
 		List<Account> localAccountList = accountRepository.findAllByUserIdAndStatus(userId, AccountStatus.ACTIVATED.getValue());
 
-		List<GetAllAcountsResponseDto> returnList = new ArrayList<>();
+		List<GetAllAcountsResponseDto.AccountDto> returnList = localAccountList.stream()
+			.map(account -> {
+				GetAllAcountsResponseDto.AccountDto dto = GetAllAcountsResponseDto.AccountDto.from(account);
 
-		for (Account account : localAccountList) {
-			GetAllAcountsResponseDto dto = GetAllAcountsResponseDto.from(account);
+				// PetToAccount에서 첫 번째 petId 가져오기
+				List<Long> petIds = account.getPetToAccounts().stream()
+					.map(PetToAccount::getPetId)
+					.toList();
 
-			FinApiResponseDto.AccountListResponseDto matchingAccount = accountList.stream()
-				.filter(dtoAccount -> dtoAccount.getAccountNo().equals(dto.getAccountNo()))
-				.findFirst()
-				.orElseThrow(() -> new BusinessLogicException(ExceptionCode.INTERNAL_SERVER_ERROR));
+				// petList가 비어 있거나, petId와 일치하는 PetCustomDto를 찾지 못하면 null 설정
+				dto.setPetPicture(Optional.ofNullable(petIds)
+					.filter(ids -> !ids.isEmpty())
+					.flatMap(ids -> petList.stream()
+						.filter(p -> p.getPetId().equals(ids.get(0)))
+						.findFirst()
+						.map(PetCustomDto::getPetImg))
+					.orElse(null));
 
-			dto.setBalance(matchingAccount.getAccountBalance());
-			returnList.add(dto);
-		}
 
-		return returnList;
+				// FinApiResponseDto와 accountNo를 매칭하여 balance 설정
+				return accountList.stream()
+					.filter(dtoAccount -> dtoAccount.getAccountNo().equals(dto.getAccountNo()))
+					.findFirst()
+					.map(dtoAccount -> {
+						dto.setBalance(dtoAccount.getAccountBalance());
+						return dto;
+					})
+					.orElseThrow(() -> new BusinessLogicException(ExceptionCode.INTERNAL_SERVER_ERROR));
+			})
+			.toList();
+
+
+		return new GetAllAcountsResponseDto(pictureCnt, interest, returnList);
 	}
 
-	@Transactional
 	public void deleteAccount(Long userId, String userKey, Long accountId) {
-		Account account = accountRepository.findByIdWithRecurringTransaction(accountId);
-		if (account == null) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND);
-		}
-		if (userId != account.getUserId()) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_USER_NOT_MATCH);
-		}
-
-		if (!account.getStatus().equals(AccountStatus.ACTIVATED.getValue())) {
-			throw new BusinessLogicException(ExceptionCode.INVALID_ACCOUNT_STATUS);
-		}
+		Account account = accountRepository.findByAccountIdAndStatusAndUserId(accountId,
+			AccountStatus.ACTIVATED.getValue(), userId).orElseThrow(
+				() -> new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND)
+		);
 
 		account.setStatus(AccountStatus.INACTIVATED.getValue());
 		if (account.getRecurringTransaction() != null) {
@@ -139,22 +175,12 @@ public class AccountService {
 			account.getLinkedAccount().getAccountNumber());
 	}
 
-	@Transactional
 	public void updateRecurringTransaction(UpdateRecurringTransactionRequestDto updateRecurringTransactionRequestDto,
 		Long userId) {
-		Account account = accountRepository.findByIdWithRecurringTransaction(
-			updateRecurringTransactionRequestDto.getAccountId());
-
-		if (account == null) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND);
-		}
-		if (userId != account.getUserId()) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_USER_NOT_MATCH);
-		}
-
-		if (!account.getStatus().equals(AccountStatus.ACTIVATED.getValue())) {
-			throw new BusinessLogicException(ExceptionCode.INVALID_ACCOUNT_STATUS);
-		}
+		Account account = accountRepository.findByAccountIdAndStatusAndUserId(
+			updateRecurringTransactionRequestDto.getAccountId(), AccountStatus.ACTIVATED.getValue(), userId).orElseThrow(
+				() -> new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND)
+		);
 
 		if (account.getRecurringTransaction().getAmount() == updateRecurringTransactionRequestDto.getAmount()
 			&& account.getRecurringTransaction().getPaymentDate() == updateRecurringTransactionRequestDto.getDay()) {
@@ -180,30 +206,19 @@ public class AccountService {
 
 	}
 
-	@Transactional
 	public void updateAccountName(UpdateAccountNameRequestDto updateAccountNameRequestDto, Long userId) {
-		Account account = accountRepository.findById(updateAccountNameRequestDto.getAccountId()).orElseThrow();
-		if (!account.getStatus().equals(AccountStatus.ACTIVATED.getValue())) {
-			throw new BusinessLogicException(ExceptionCode.INVALID_ACCOUNT_STATUS);
-		}
-		if (account.getUserId() != userId) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_USER_NOT_MATCH);
-		}
+		Account account = accountRepository.findByAccountIdAndStatusAndUserId(updateAccountNameRequestDto.getAccountId()
+		, AccountStatus.ACTIVATED.getValue(), userId).orElseThrow(
+			() -> new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND)
+		);
 		account.setName(updateAccountNameRequestDto.getName());
 	}
 
 	@Transactional(readOnly = true)
 	public GetAccountDetailsResponseDto getAccountDetails(Long userId, String userKey, Long accountId) {
-		Account account = accountRepository.findByIdWithRecurringTransaction(accountId);
-		if (account == null) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND);
-		}
-		if (!account.getStatus().equals(AccountStatus.ACTIVATED.getValue())) {
-			throw new BusinessLogicException(ExceptionCode.INVALID_ACCOUNT_STATUS);
-		}
-		if (account.getUserId() != userId) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_USER_NOT_MATCH);
-		}
+		Account account = accountRepository.findByIdWithRecurringTransaction(accountId).orElseThrow(
+			() -> new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND)
+		);
 
 		GetAccountDetailsResponseDto returnDto = new GetAccountDetailsResponseDto(account);
 		LocalDate nowDate = LocalDate.now();
@@ -224,16 +239,10 @@ public class AccountService {
 		int sortOption) {
 		Pageable pageable = PageRequest.of(page, 12);
 
-		Account account = accountRepository.findByIdWithRecurringTransaction(accountId);
-		if (account == null) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND);
-		}
-		if (!account.getStatus().equals(AccountStatus.ACTIVATED.getValue())) {
-			throw new BusinessLogicException(ExceptionCode.INVALID_ACCOUNT_STATUS);
-		}
-		if (account.getUserId() != userId) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_USER_NOT_MATCH);
-		}
+		Account account = accountRepository.findByAccountIdAndStatusAndUserId(accountId,
+			AccountStatus.ACTIVATED.getValue(), userId).orElseThrow(
+			() -> new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND)
+		);
 
 		DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
 		LocalDate nowDate = LocalDate.now();
@@ -258,12 +267,9 @@ public class AccountService {
 	}
 
 	public void accountTransfer(Long userId, String userKey, AccountTransferRequestDto accountTransferRequestDto) {
-		Account account = accountRepository.findById(accountTransferRequestDto.getAccountId()).orElseThrow(
+		Account account = accountRepository.findByAccountIdAndStatusAndUserId(accountTransferRequestDto.getAccountId(),
+			AccountStatus.ACTIVATED.getValue(), userId).orElseThrow(
 			() -> new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND));
-
-		if (account.getUserId() != userId) {
-			throw new BusinessLogicException(ExceptionCode.ACCOUNT_USER_NOT_MATCH);
-		}
 
 		String depositAccountNo = accountTransferRequestDto.getDestinationAccountNo();
 		String depositTransactionSummary = accountTransferRequestDto.getDestinationDescription();
@@ -271,6 +277,24 @@ public class AccountService {
 		String withdrawalAccountNo = account.getAccountNo();
 		String withdrawalTransactionSummary = accountTransferRequestDto.getDescription();
 		accountFinApiService.updateDemandDepositAccountTransfer(userKey,
-			depositAccountNo, depositTransactionSummary, transactionBalance, withdrawalAccountNo, withdrawalTransactionSummary);
+			depositAccountNo, depositTransactionSummary, transactionBalance,
+			withdrawalAccountNo, withdrawalTransactionSummary);
+	}
+
+	public AccountHolderNameResponseDto getAccountHolderName(String userKey, String accountNo) {
+		FinApiResponseDto.InquireDemandDepositAccountHolderName dto = accountFinApiService
+			.InquireDemandDepositAccountHolderName(accountNo, userKey);
+		return new AccountHolderNameResponseDto(dto);
+
+	}
+
+	public void checkAccountPassword(Long userId, CheckAccountPassword checkAccountPassword) {
+		Account account = accountRepository.findByAccountIdAndStatusAndUserIdAndAccountNo(checkAccountPassword.getAccountId(),
+			AccountStatus.ACTIVATED.getValue(), userId, checkAccountPassword.getAccountNo()).orElseThrow(
+				() -> new BusinessLogicException(ExceptionCode.ACCOUNT_NOT_FOUND));
+
+		if(account.getPassword().equals(checkAccountPassword.getPassword())) {
+			throw new BusinessLogicException(ExceptionCode.INVALID_ACCOUNT_PASSWORD);
+		}
 	}
 }
